--- a/src/xbuild/TillageDialog.form
+++ b/src/xbuild/TillageDialog.form
@@ -8,6 +8,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowClosed" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowClosed"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -26,9 +29,10 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="jXLabel1" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbDate" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel2" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbDay" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -48,6 +52,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Component id="txtTDEP" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                  <Component id="txtTDAY" alignment="0" min="-2" pref="108" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -58,15 +63,20 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="txtTDAY" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbDay" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="dpTDATE" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jXLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lbDate" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="txtTIMPL" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="bnSelectTIMPL" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jXLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="bnSelectTIMPL" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -125,7 +135,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bnCancelActionPerformed"/>
       </Events>
     </Component>
-    <Component class="org.jdesktop.swingx.JXLabel" name="jXLabel1">
+    <Component class="org.jdesktop.swingx.JXLabel" name="lbDate">
       <Properties>
         <Property name="text" type="java.lang.String" value="Date"/>
       </Properties>
@@ -145,6 +155,13 @@
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="Variables.getDateFormatString()" type="code"/>
         </Property>
+      </Properties>
+    </Component>
+    <Component class="xbuild.Components.XFormattedTextField" name="txtTDAY">
+    </Component>
+    <Component class="javax.swing.JLabel" name="lbDay">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Day"/>
       </Properties>
     </Component>
   </SubComponents>
